--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-tl = "0.7.7"
 reqwest = { version = "0.11.13", features = ["blocking"] } 
+chrono = "0.4.23"
 dotenv = "0.15.0"
+scraper = "0.13.0"
