--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,5 +5,5 @@ edition = "2021"
 
 [dependencies]
 reqwest = { version = "0.11.13", features = ["blocking"] } 
-chrono = "0.4.23"
 dotenv = "0.15.0"
+itertools = "0.10.5"
