--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,3 +7,4 @@ edition = "2021"
 reqwest = { version = "0.11.13", features = ["blocking"] } 
 dotenv = "0.15.0"
 itertools = "0.10.5"
+grid = "0.9.0"
